--- a/combinatorics/sequence/fibonacci/Makefile
+++ b/combinatorics/sequence/fibonacci/Makefile
@@ -1,16 +1,16 @@
 include ../../../flags.mk
-SRC = fib.h fib.c  fib.h  fib_test.cc fib_benchmark.cc
+SRC = fib.h fib.cc  fib.h  fib_test.cc fib_benchmark.cc
 
-test: fib.h fib.c fib_test.cc
-	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) fib.c fib_test.cc $(TEST_FLAGS) -o fib_test
+test: fib.h fib.cc fib_test.cc
+	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) fib.cc fib_test.cc $(TEST_FLAGS) -o fib_test
 	./fib_test
 
-benchmark: fib.c fib.h fib_benchmark.cc
-	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) fib.c fib_benchmark.cc $(BENCHMARK_FLAGS) -o fib_benchmark
+benchmark: fib.cc fib.h fib_benchmark.cc
+	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) fib.cc fib_benchmark.cc $(BENCHMARK_FLAGS) -o fib_benchmark
 	./fib_benchmark
 
-perf: fib.c fib.h fib_benchmark.cc
-	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) fib.c fib_benchmark.cc $(PERF_FLAGS) -o fib_perf
+perf: fib.cc fib.h fib_benchmark.cc
+	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) fib.cc fib_benchmark.cc $(PERF_FLAGS) -o fib_perf
 
 format: $(SRC)
 	$(CLANG_FORMAT) $(CLANG_FORMAT_FLAGS) $(SRC)
